# autosec

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yaml
Sample Uses/: sample_shell.sh  sample_use_case.py
autosec/: autocred.py  autolog.py  cli.py  config.py
