[tool.poetry]
name = "autosec"
version = "1.0.21"
description = "A collection of utilities for security operations and automation."
authors = ["Dylan Diamond <dylandiamond1997@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/dylandiamond97/autosec"
packages = [{ include = "autosec" }]

[tool.poetry.dependencies]
python = ">=3.11"
cryptography = "*"
python-dotenv = "*"
requests = "*"

[tool.poetry.scripts]
autocred = "autosec.cli:autocred_cli"
autolog = "autosec.cli:autolog_cli"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry-plugin"]
"dynamic-versioning" = "poetry_dynamic_versioning"

[tool.poetry-dynamic-versioning]
enable = true
strip_local_version = true
